partman-auto (82) UNRELEASED; urgency=low

  * lib/auto-shared.sh: Consider device-mapper devices/dmraid arrays with the
    sataraid flag set as usable for automatic partitioning.
    Patch based on work done by Luke Yelavich <themuso@ubuntu.com> in Ubuntu.

 -- Giuseppe Iuculano <giuseppe@iuculano.it>  Sat, 06 Sep 2008 18:23:55 +0200

partman-auto (81) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Move dev_to_partman() to lib/auto-shared.sh.
    Based on a patch by Grégory Oestreicher.
  * Use convert_to_megabytes() in decode_recipe(), autopartition and
    perform_recipe.
    Depends: partman-base (>= 125)
  * Rename $devfspv_devices to $pv_devices in lib/auto-shared.sh now that we
    don't have devfs devices anymore.
  * create_primary_partitions() and create_partitions() now add dm-crypt
    devices to $pv_devices when using the "crypto" method, like it is done for
    LVM.
  * Call prepare_new_labels() before calling create_new_label().
    Depends: partman-partitioning (>= 62)
  * Move get_last_free_partition_infos() out of auto_init_disk() in
    lib/auto-shared.sh.  autopartition has been updated accordingly.
    Based on a patch by Grégory Oestreicher.
    Breaks: partman-auto-lvm (<< 29)
  * Rename auto_init_disk() to auto_init_disks() as it can now initialize
    multiple disks at once.  autopartition has been updated accordingly.
    Breaks: partman-auto-lvm (<< 29)
  * Call autopartition-lvm on all disks in partman-auto/disk at once to enable
    proper support of multiple disks partitioning.
    Depends: partman-auto-lvm (>= 29)
  * Call auto_init_disks() with all disks that are going to be used in a
    "raid" method in order to avoid bogus partman restarts.

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)

 -- Jérémy Bobbio <lunar@debian.org>  Mon, 25 Aug 2008 21:04:38 +0200

partman-auto (80) unstable; urgency=low

  [ Jérémy Bobbio ]